NETPOL/CILIUM/cilium_AllNodes-to-TCP22_HostNetworkPoliciy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ssh-host-policy"
spec:
  description: ""
  nodeSelector:
    matchLabels:
      node-access: ssh
  ingress:
  # Allow all cluster endpoints as identified by Cilium (Hosts, remote-node, pods and Vilium health)
  - fromEntities:
    - cluster
  - toPorts:
    - ports:
      - port: "22"
        protocol: TCP
  - icmps:
    - fields:
      - type: EchoRequest
        family: IPv4
